--- a/src/main/resources/META-INF/cubicchunks_at.cfg
+++ b/src/main/resources/META-INF/cubicchunks_at.cfg
@@ -16,4 +16,6 @@ public-f net.minecraft.world.WorldEntitySpawner # disable mob spawning
 public net.minecraft.client.renderer.RenderGlobal$ContainerLocalRenderInformation
 public net.minecraft.client.renderer.RenderGlobal$ContainerLocalRenderInformation field_178036_a #renderChunk
 
+public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher field_178524_h # queueChunkUploads - used in MixinRenderGlobal
+
 public net.minecraft.world.WorldProvider field_76577_b # terrainType - used in VanillaCubicProvider
